Fix styles, titles and dark mode issues

--- a/frontend/app/styles/_variables.scss
+++ b/frontend/app/styles/_variables.scss
@@ -37,12 +37,13 @@ $primary-dark: color.adjust(#6024ec, $lightness: -10%);
 	--default-bg: #dde1f8;
 	--default-border: #dde1f8;
 	--bg-color: #fff;
-	--bg-contrast: #F1F6FD;
+	--bg-contrast: #f8f8f8;
 	--bg-contrast-2: #e2ebfd;
 	--selection-color: #cbd4dd;
 	--font-color: #3c4450;
 	--font-color-dark: #3c3b3d;
 	--font-color-light: #5b5967;
+	--font-color-sub: #666;
 	--opposite-color: #111;
 	--border-color: #dfe0e5;
 	--border-color-accent: #c4c6d0;
@@ -94,6 +95,7 @@ $primary-dark: color.adjust(#6024ec, $lightness: -10%);
 	--font-color: #ccc;
 	--font-color-dark: #ccc;
 	--font-color-light: rgb(179 179 179);
+	--font-color-sub: #888;
 	--border-color: rgb(255 255 255 / 10%);
 	--opposite-color: #eee;
 	--shadow: rgb(0 0 0 / 100%);
